# Django-polls

./: README.md  pyproject.toml
pollsapi/polls/: admin.py  apiviews.py  serializers.py  tests.py  urls.py  views.py
pollsapi/polls/migrations/: 0001_initial.py
pollsapi/pollsapi/: settings.py  urls.py
